# pytest-odc

./: .gitignore  README.md  conftest.py  pyproject.toml  setup.py  tox.ini
odc/testing/: database.py
tests/: test_example.py
tests/datasets/: ga_ls8c_ard_3-sample.yaml
