[build-system]
requires = ["setuptools>=58.0.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-odc"
version = "0.3.0"
authors = [
    {name = "Open Data Cube"}
]
#license = "Apache Software License 2.0"
description = "A pytest plugin for simplifying ODC database tests"
readme = "README.md"
#packages = ["odc.testing"]
requires-python = ">=3.8"
dependencies = [
    "pytest>=3.5.0",
    "docker"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
[project.urls]
Homepage = "https://www.opendatacube.org/"
Repository =  "https://github.com/opendatacube/pytest-odc"


[project.entry-points.pytest11]
odc-pytest-database = "odc.testing.database"
